--- a/SignApplication/Themes/Default/css/Site.css
+++ b/SignApplication/Themes/Default/css/Site.css
@@ -1,2 +1,52 @@
 ﻿body {
+  padding-top: 70px;
+}
+
+.form-signin {
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto;
+}
+.form-signin .form-signin-heading,
+.form-signin .checkbox {
+  margin-bottom: 10px;
+}
+.form-signin .checkbox {
+  font-weight: normal;
+}
+.form-signin .form-control {
+  position: relative;
+  height: auto;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 10px;
+  font-size: 16px;
+}
+.form-signin .form-control:focus {
+  z-index: 2;
+}
+.form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+/* transition place holder right from the focus */
+.form-signin input::-webkit-input-placeholder       {text-indent: 0px;   transition: text-indent 0.3s ease;}
+.form-signin input::-moz-placeholder                {text-indent: 0px;   transition: text-indent 0.3s ease;}
+.form-signin input:-moz-placeholder                 {text-indent: 0px;   transition: text-indent 0.3s ease;}
+.form-signin input:-ms-input-placeholder            {text-indent: 0px;   transition: text-indent 0.3s ease;}
+.form-signin input:focus::-webkit-input-placeholder {text-indent: 500px; transition: text-indent 0.3s ease;}
+.form-signin input:focus::-moz-placeholder          {text-indent: 500px; transition: text-indent 0.3s ease;}
+.form-signin input:focus:-moz-placeholder           {text-indent: 500px; transition: text-indent 0.3s ease;}
+.form-signin input:focus:-ms-input-placeholder      {text-indent: 500px; transition: text-indent 0.3s ease;}
+
+.dropdown-toggle {
+    cursor: default;    
 }
