--- a/SignApplication/Views/Documents/List.cshtml
+++ b/SignApplication/Views/Documents/List.cshtml
@@ -1,44 +1,1 @@
-﻿@using System.Web.Optimization
-
-@Styles.Render("~/Content/fileupload")
-<div>
-    <li>
-        <ul>
-            <a><img src="~/Themes/Default/img/48x48/plus.png"/></a>
-        </ul>
-    </li>
-</div>
-<div>
-    <fieldset>
-    <div class="control-group">
-        <label class="control-label" for="Text">
-            Image
-        </label>
-        <div class="controls">
-            <div id="UploadImage">
-                Upload 
-            </div>
-        </div>
-    </div>
-    <div>
-        <img src="" alt="" id="ImagePreview" />
-    </div>
-    </fieldset>
-
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th>#</th>
-                <th>Header1</th>
-                <th>Header2</th>
-                <th>Header3</th>
-                <th>Header4</th>
-                <th>Header5</th>
-            </tr>
-        </thead>
-        <tr ng-repeat="doc in documents">
-            
-        </tr>
-    </table>
-</div>
-@Scripts.Render("~/bundles/fileupload")
+﻿<h1>Список документов</h1>
