--- a/SignApplication/Views/Home/Index.cshtml
+++ b/SignApplication/Views/Home/Index.cshtml
@@ -3,11 +3,47 @@
     Layout = "~/Views/Shared/_MasterLayout.cshtml";
 }
 
-<div class="menu" ng-controller="menuController">
-    <ul>
-        <li>
-            <a href="#/documents"><img src="~/Themes/Default/img/48x48/folder.png"/></a>
-        </li>
-    </ul>
-</div>
-<div ng-view></div>
+
+<nav class="navbar navbar-default navbar-fixed-top" ng-controller="menuController">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Sign application</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li>
+                    <a href="#/info">Информация</a>
+                </li>
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Документы<span class="caret"></span></a>
+                     <ul class="dropdown-menu" role="menu">
+                        <li><a href="#/documents">Список документов</a></li>
+                        <li><a href="#/upload">Загрузить документ</a></li>
+                        <li class="divider"></li>
+                        <li class="dropdown-header">Nav header</li>
+                        <li><a href="#">Separated link</a></li>
+                        <li><a href="#">One more separated link</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#">Что-то еще</a>
+                </li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a href="#/setup">Настройки</a>
+                </li>
+            </ul>
+        </div>
+        <!--/.nav-collapse -->
+    </div>
+</nav>
+
+<div class="container" ng-view></div>
+
