--- a/SignApplication/Views/Shared/_Layout.cshtml
+++ b/SignApplication/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using System.Web.Optimization
+@{
     Layout = null;
 }
 
@@ -7,34 +8,13 @@
 <html ng-app="AppTest">
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Layout</title>
-    @RenderSection("Script",false)
-    <script src="https://code.angularjs.org/1.2.27/angular.js" type="text/javascript"></script>
-    <script src="https://code.angularjs.org/1.2.27/angular-route.js"></script>
-        <script type="text/javascript">
-                var app = angular.module("AppTest", ['ngRoute']);
-
-                app.controller("TestCtrl", ['$scope', '$http', function ($scope, $http) {
-
-                    $scope.onclick = function() {
-                        $http.get('login/test?id=9').success(function (data) {
-                            console.log(data);
-                            $scope.resultMessage = data;
-                            alert(data.resultMessage);
-                        });
-                    };
-
-                    $scope.resultMessage = "test";
-                }]);
-        </script>
-
+    <title>Sign Application</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    @Styles.Render("~/Default/css")
 </head>
 <body>
-    <div ng-controller="TestCtrl">
+    <div ng-controller="LoginController">
         @RenderBody()
     </div>
-    <footer>
-        @RenderSection("Footer",false)
-    </footer>
 </body>
 </html>
