--- a/SignApplication/Views/Shared/_MasterLayout.cshtml
+++ b/SignApplication/Views/Shared/_MasterLayout.cshtml
@@ -8,20 +8,55 @@
 <html ng-app='signApp'>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>_MasterLayout</title>
+    <title>Sign Application</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="~/Themes/Default/css/Site.css"/>
+    @Styles.Render("~/Default/css")
+    
+    
+    <!-- blueimp Gallery styles -->
+    <link rel="stylesheet" href="//blueimp.github.io/Gallery/css/blueimp-gallery.min.css">
+    <!-- CSS to style the file input field as button and adjust the Bootstrap progress bars -->
+    <link rel="stylesheet" href="/Themes/Default/css/jquery.fileupload.css">
+    <link rel="stylesheet" href="/Themes/Default/css/jquery.fileupload-ui.css">
 
-    @Scripts.Render("~/bundles/angular")
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    @Scripts.Render("~/bundles/angular")
     <script src="https://code.angularjs.org/1.2.27/angular-animate.js"></script>
     <script src="https://code.angularjs.org/1.2.27/angular-route.js"></script>
     <script src="https://code.angularjs.org/1.2.27/angular-resource.js"></script>
+    
+    <!-- The jQuery UI widget factory, can be omitted if jQuery UI is already included -->
+    <script src="/Scripts/FileUpload/vendor/jquery.ui.widget.js"></script>
+    <!-- The Load Image plugin is included for the preview images and image resizing functionality -->
+    <script src="//blueimp.github.io/JavaScript-Load-Image/js/load-image.all.min.js"></script>
+    <!-- The Canvas to Blob plugin is included for image resizing functionality -->
+    <script src="//blueimp.github.io/JavaScript-Canvas-to-Blob/js/canvas-to-blob.min.js"></script>
+    <!-- Bootstrap JS is not required, but included for the responsive demo navigation -->
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <!-- blueimp Gallery script -->
+    <script src="//blueimp.github.io/Gallery/js/jquery.blueimp-gallery.min.js"></script>
+    <!-- The Iframe Transport is required for browsers without support for XHR file uploads -->
+    <script src="/Scripts/FileUpload/jquery.iframe-transport.js"></script>
+    <!-- The basic File Upload plugin -->
+    <script src="/Scripts/FileUpload/jquery.fileupload.js"></script>
+    <!-- The File Upload processing plugin -->
+    <script src="/Scripts/FileUpload/jquery.fileupload-process.js"></script>
+    <!-- The File Upload image preview & resize plugin -->
+    <script src="/Scripts/FileUpload/jquery.fileupload-image.js"></script>
+    <!-- The File Upload audio preview plugin -->
+    <script src="/Scripts/FileUpload/jquery.fileupload-audio.js"></script>
+    <!-- The File Upload video preview plugin -->
+    <script src="/Scripts/FileUpload/jquery.fileupload-video.js"></script>
+    <!-- The File Upload validation plugin -->
+    <script src="/Scripts/FileUpload/jquery.fileupload-validate.js"></script>
+    <!-- The File Upload Angular JS module -->
+    <script src="/Scripts/FileUpload/jquery.fileupload-angular.js"></script>
+    
     @Scripts.Render("~/bundles/application")
+
 </head>
 <body>
-    @RenderBody() 
-    <div>
-    </div>
+    @RenderBody()
 </body>
 </html>
