--- a/SignApplication/Views/Upload/Index.cshtml
+++ b/SignApplication/Views/Upload/Index.cshtml
@@ -2,7 +2,7 @@
 
 
 <!-- The file upload form used as target for the file upload widget -->
-<form id="fileupload" action="'Upload/Upload/" method="POST" enctype="multipart/form-data" data-ng-controller="DemoFileUploadController" data-file-upload="options" data-ng-class="{'fileupload-processing': processing() || loadingFiles}">
+<form id="fileupload" action="'Upload/Upload/" method="POST" enctype="multipart/form-data" data-ng-controller="documentFileUploadController" data-file-upload="options" data-ng-class="{'fileupload-processing': processing() || loadingFiles}">
     <!-- The fileupload-buttonbar contains buttons to add/delete files and start/cancel the upload -->
     <div class="row fileupload-buttonbar">
         <div class="col-lg-7">
@@ -63,7 +63,7 @@
                     <i class="glyphicon glyphicon-ban-circle"></i>
                     <span>Отменить</span>
                 </button>
-                <button data-ng-controller="FileDestroyController" type="button" class="btn btn-danger destroy" data-ng-click="file.$destroy()" data-ng-hide="!file.$destroy">
+                <button data-ng-controller="documentFileDestroyController" type="button" class="btn btn-danger destroy" data-ng-click="file.$destroy()" data-ng-hide="!file.$destroy">
                     <i class="glyphicon glyphicon-trash"></i>
                     <span>Удалить</span>
                 </button>
