--- a/SignApplication/Themes/Default/css/Site.css
+++ b/SignApplication/Themes/Default/css/Site.css
@@ -50,3 +50,47 @@
 .dropdown-toggle {
     cursor: default;    
 }
+
+.page {
+    border: 1px solid #ddd;
+}
+
+.page-content { 
+    width: 100%;
+}
+
+.page-elem {
+    margin-left: 5px;
+    padding-top: 10px;
+    cursor: move;
+}
+
+.options .nav-tabs>li.active>a, .code .nav-tabs>li.active>a:hover, .code .nav-tabs>li.active>a:focus {
+    background-color: #f8f8f8;
+    border: 1px solid #ccc;
+    border-bottom-color: transparent;
+}
+
+.tab-content {
+    border: 1px solid #ddd;
+    border-top: none;
+    /*background-color: #f8f8f8;*/
+}
+
+.doc-elem {
+    position: absolute !important;
+    border: 1px solid #115d81;
+    cursor: move;
+    background-color: #D9F1FE;
+    opacity: 0.7;
+    filter: alpha(Opacity=70);
+    display: flex;
+}
+
+.doc-elem .elem-text {
+    font-family: 'Alexander';
+    font-size: 0.85em;
+    text-align: center;
+    text-transform: lowercase;
+    margin: auto;
+}
