--- a/SignApplication/Views/Documents/Edit.cshtml
+++ b/SignApplication/Views/Documents/Edit.cshtml
@@ -1,1 +1,34 @@
-﻿<h2>Edit</h2>
+﻿<div class="row">
+    <div class="col-md-8">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">{{document.Name}}</h3>
+            </div>
+            <div class="panel-body">
+                <div class="page">
+                    <img id="droppable" class="page-content" src="{{document.DocFilePath}}"/>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-4 options">
+        <tabset>
+            <tab>
+                <tab-heading>
+                    <i class="glyphicon glyphicon-wrench"></i> Компоненты
+                </tab-heading>
+                <div class="tab-content">
+                    <document-element ng-repeat="elem in listElements" options="elem"></document-element>
+                </div>
+            </tab>
+            <tab>
+                <tab-heading>
+                    <i class="glyphicon glyphicon-info-sign"></i> Опции
+                </tab-heading>
+                <div class="tab-content">
+                    
+                </div>
+            </tab>
+        </tabset>
+    </div>
+</div>
