--- a/SignApplication/Views/Home/Index.cshtml
+++ b/SignApplication/Views/Home/Index.cshtml
@@ -13,12 +13,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Sign application</a>
+            <a class="navbar-brand" href="#">Распишитесь здесь!</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li>
-                    <a href="#/info">Информация</a>
+                    <a href="#/info">Статистика</a>
                 </li>
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Документы<span class="caret"></span></a>
@@ -32,7 +32,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#">Что-то еще</a>
+                    <a href="#">Запросы</a>
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
