--- a/SignApplication/Themes/Default/css/Site.css
+++ b/SignApplication/Themes/Default/css/Site.css
@@ -38,14 +38,23 @@
 }
 
 /* transition place holder right from the focus */
-.form-signin input::-webkit-input-placeholder       {text-indent: 0px;   transition: text-indent 0.3s ease;}
+/*.form-signin input::-webkit-input-placeholder       {text-indent: 0px;   transition: text-indent 0.3s ease;}
 .form-signin input::-moz-placeholder                {text-indent: 0px;   transition: text-indent 0.3s ease;}
 .form-signin input:-moz-placeholder                 {text-indent: 0px;   transition: text-indent 0.3s ease;}
 .form-signin input:-ms-input-placeholder            {text-indent: 0px;   transition: text-indent 0.3s ease;}
 .form-signin input:focus::-webkit-input-placeholder {text-indent: 500px; transition: text-indent 0.3s ease;}
 .form-signin input:focus::-moz-placeholder          {text-indent: 500px; transition: text-indent 0.3s ease;}
 .form-signin input:focus:-moz-placeholder           {text-indent: 500px; transition: text-indent 0.3s ease;}
-.form-signin input:focus:-ms-input-placeholder      {text-indent: 500px; transition: text-indent 0.3s ease;}
+.form-signin input:focus:-ms-input-placeholder      {text-indent: 500px; transition: text-indent 0.3s ease;}*/
+
+input::-webkit-input-placeholder       {text-indent: 0px;   transition: text-indent 0.3s ease;}
+input::-moz-placeholder                {text-indent: 0px;   transition: text-indent 0.3s ease;}
+input:-moz-placeholder                 {text-indent: 0px;   transition: text-indent 0.3s ease;}
+input:-ms-input-placeholder            {text-indent: 0px;   transition: text-indent 0.3s ease;}
+input:focus::-webkit-input-placeholder {text-indent: 500px; transition: text-indent 0.3s ease;}
+input:focus::-moz-placeholder          {text-indent: 500px; transition: text-indent 0.3s ease;}
+input:focus:-moz-placeholder           {text-indent: 500px; transition: text-indent 0.3s ease;}
+input:focus:-ms-input-placeholder      {text-indent: 500px; transition: text-indent 0.3s ease;}
 
 .dropdown-toggle {
     cursor: default;    
