--- a/SignApplication/Views/Home/Index.cshtml
+++ b/SignApplication/Views/Home/Index.cshtml
@@ -36,9 +36,30 @@
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li>
+                <li style="
+    border-style: inset;
+    border-bottom: 0px;
+    border-top: 0px;
+    border-left: 0px;
+">
                     <a href="#/setup">Настройки</a>
                 </li>
+  <li style="
+    padding-left: 10px;
+    padding-top: 10px;
+">
+    
+      <div style="
+    color: #777;
+    font-family: &quot;Helvetica Neue&quot;,Helvetica,Arial,sans-serif;
+">
+      Павел Андреевич
+    </div><div style="
+    color: #777;
+    font-family: &quot;Helvetica Neue&quot;,Helvetica,Arial,sans-serif; 
+    font-weight: bold; cursor:pointer;
+" class="pull-right" helvetica="" font-weight:="">[Выход]</div>
+  </li>
             </ul>
         </div>
         <!--/.nav-collapse -->
