--- a/SignApplication/Views/Shared/_MasterLayout.cshtml
+++ b/SignApplication/Views/Shared/_MasterLayout.cshtml
@@ -9,6 +9,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Sign Application</title>
+    <link href="/Themes/Default/img/signature.ico" rel="shortcut icon" type="image/x-icon" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css">
     @Styles.Render("~/Default/css")
