--- a/SignApplication/Themes/Default/css/Site.css
+++ b/SignApplication/Themes/Default/css/Site.css
@@ -124,3 +124,12 @@ input:focus:-ms-input-placeholder      {text-indent: 500px; transition: text-ind
 .registration .row {
     padding-bottom: 10px;
 }
+
+.setup {
+    padding-bottom: 10px;
+}
+
+.setup .parameter {
+    width: 100px;
+    text-align: left;
+}
